# workshop-python-basic

./: README.md  pyproject.toml
exercices/: listage001.md  listage002.md
exercices/0_variaveis/: conceitos.md  listage001.md
exercices/operadores/: conceitos.md
